--- a/packages/becsy-enable3d-package/tsconfig.json
+++ b/packages/becsy-enable3d-package/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "extends": "tsconfig/base.json",
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules"],
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
   "compilerOptions": {
     "lib": [
-      "dom",
-      "es5",
-      "scripthost",
-      "es2015.collection"
+      "DOM",
+      "ESNext"
     ]
   }
 }
