--- a/apps/ecs-debug/package.json
+++ b/apps/ecs-debug/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "ui": "*",
     "becsy-package": "*",
-    "@lastolivegames/becsy": "^0.14.2"
+    "@lastolivegames/becsy": "^0.14.2",
+    "becsy-ui": "*"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
