--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ui": "*",
-    "enable3d-package": "*"
+    "enable3d-package": "*",
+    "becsy-ui": "*"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
