ecs store using zustand

--- a/apps/ai-ecs-debug/package.json
+++ b/apps/ai-ecs-debug/package.json
@@ -13,6 +13,7 @@
     "becsy-yuka-package": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-becsy": "*",
     "yuka-ui": "*"
   },
   "devDependencies": {
