--- a/apps/ecs-debug/package.json
+++ b/apps/ecs-debug/package.json
@@ -15,7 +15,8 @@
     "becsy-ui": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "*"
+    "ui": "*",
+    "react-becsy": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
