--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-three/drei": "^9.34.2",
     "@react-three/fiber": "^8.8.9",
-    "@react-three/rapier": "^0.6.9",
+    "@react-three/rapier": "^0.11.2",
     "becsy-fiber": "*",
     "becsy-ui": "*",
     "becsy-yuka-package": "*",
     "fiber-package": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-becsy": "*",
     "stats.js": "^0.17.0",
     "three-ui": "*",
     "three-yuka-package": "*",
