--- a/packages/becsy-package/package.json
+++ b/packages/becsy-package/package.json
@@ -5,7 +5,8 @@
   "types": "./index.ts",
   "type": "module",
   "dependencies": {
-    "@lastolivegames/becsy": "^0.14.3"
+    "@lastolivegames/becsy": "^0.14.3",
+    "react-becsy": "*"
   },
   "devDependencies": {
     "tsconfig": "*",
