--- a/packages/becsy-ui/package.json
+++ b/packages/becsy-ui/package.json
@@ -11,7 +11,8 @@
     "becsy-package": "*",
     "flatted": "^3.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-becsy": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
