--- a/packages/becsy-yuka-package/tsconfig.json
+++ b/packages/becsy-yuka-package/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["**/*.ts"],
   "exclude": ["node_modules"],
   "compilerOptions": {
+    "jsx": "react",
     "lib": [
       "dom",
       "es5",
