--- a/apps/game-server/package.json
+++ b/apps/game-server/package.json
@@ -18,6 +18,7 @@
     "next-transpile-modules": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-becsy": "*",
     "ui": "*"
   },
   "devDependencies": {
