--- a/packages/becsy-fiber/package.json
+++ b/packages/becsy-fiber/package.json
@@ -16,6 +16,7 @@
     "fiber-package": "*",
     "flatted": "^3.2.7",
     "react": "^18.2.0",
+    "react-becsy": "*",
     "react-dom": "^18.2.0",
     "three": "^0.144.0",
     "three-package": "*"
