--- a/apps/game-server/package.json
+++ b/apps/game-server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .next",
-    "dev": "next dev -p 3002",
+    "dev": "next dev",
     "lint": "TIMING=1 next lint",
     "start": "next start "
   },
@@ -15,11 +15,12 @@
     "becsy-package": "*",
     "becsy-ui": "*",
     "becsy-yuka-package": "*",
+    "eslint-config-next": "^13.1.6",
     "fiber-package": "*",
     "file-loader": "^6.2.0",
-    "next": "^12.3.4",
+    "next": "^13.1.6",
     "next-pwa": "^5.6.0",
-    "next-transpile-modules": "^9.1.0",
+    "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-becsy": "*",
     "react-dom": "^18.2.0",
@@ -40,7 +41,20 @@
     "tsconfig": "*",
     "typescript": "^4.8.4"
   },
-  "bundleDependencies": [
-    "ui"
+  "bundledDependencies": [
+    "ui",
+    "tsconfig",
+    "becsy-yuka-package",
+    "becsy-package",
+    "becsy-ui",
+    "yuka-package",
+    "yuka-ui",
+    "@lastolivegames/becsy",
+    "react-becsy",
+    "react-yuka",
+    "becsy-fiber",
+    "fiber-package",
+    "three-package",
+    "terrain-generator-package"
   ]
 }
