--- a/packages/yuka-ui/package.json
+++ b/packages/yuka-ui/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "yuka": "^0.7.8"
+    "yuka": "^0.7.8",
+    "yuka-package": "*"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
